--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -30,3 +30,10 @@ body {
 	color: #ED6B87;
 	font-family:'porter_sans_blockblock',sans-serif;
 }
+
+.field_with_errors {
+	color: #ff3333;
+	background-color: #FFEEEE;
+	border-radius: 3px;
+	padding: 8px;
+}
