--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -47,3 +47,15 @@
 		<% end %>
 	</div>
 </div>
+
+<h1>Comments</h1>
+
+<% @place.comments.each do |comment| %>
+	<div> 
+		<blockquote>
+			<b><%= comment.rating %></b> -
+				<%= comment.message %>
+			<small><%= comment.user.email %></small>
+		</blockquote>
+	</div>
+<% end %>
