--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -31,8 +31,21 @@
 
 	<br />
 
+	<p>
+		<% @place.photos.each do |photo| %>
+			<div class="col-xs-12 col-sm-6"> 
+				<%= image_tag photo.picture %><br />
+				<%= photo.caption %>
+			</div>
+		<% end %>
+	</p>
+
 	<div class="pull-right">
 		<% if current_user && current_user == @place.user %>
+			<!-- Button trigger photo modal -->
+			<button class="btn btn-primary" data-toggle="modal" data-target="#photoModal">
+			  Add a photo
+			</button>
 			<%= link_to 'Edit', edit_place_path(@place), :class => 'btn btn-primary' %>
 			<%= link_to 'Destroy', place_path(@place), :method => :delete, :data => {:confirm => 'Are you sure you want to delete this?'},:class => 'btn btn-danger' %>
 		<% end %>
@@ -70,6 +83,32 @@
   </div>
 </div>
 
+<!-- Photo Modal -->
+<div class="modal fade" id="photoModal" tabindex="-1" role="dialog" aria-labelledby="photoModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="photoModalLabel">Add a photo</h4>
+      </div>
+      <%= simple_form_for @photo, :url => place_photos_path(@place) do |f| %>
+	      <div class="modal-body">
+					<div class="clear">
+						 
+						<%= f.input :picture %>
+						<%= f.input :caption %>
+							<br />			
+					</div>
+	      </div>
+	      <div class="modal-footer">
+	        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+	        <%= f.submit "Add a photo", :class => 'btn btn-primary' %>
+
+	    	</div>
+      <% end %>
+    </div>
+  </div>
+</div>
 
 <div class="col-xs-10 col-xs-offset-1">
 
