--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -32,12 +32,14 @@
 	<br />
 
 	<p>
-		<% @place.photos.each do |photo| %>
-			<div class="col-xs-12 col-sm-6"> 
-				<%= image_tag photo.picture %><br />
-				<%= photo.caption %>
-			</div>
+     
+		<% @place.photos.each do |photo| %>           
+          <a href=<%= photo.picture %> class="img-thumbnail">
+            <p><%= photo.caption %></p> 
+            <img src=<%= photo.picture %> alt="" style="width:150px;height:150px">
+          </a>
 		<% end %>
+ 
 	</p>
 
 	<div class="pull-right">
