Styling of carousel

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -8,13 +8,13 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img src="/assets/slider1.jpg" alt="Delicious Pizza">
+      <%= image_tag 'slider1.jpg', :class => 'img-responsive' %>
       <div class="carousel-caption">
         Find the best pizza places!
       </div>
     </div>
     <div class="item">
-      <img src="/assets/slider2.jpg" alt="Gourmet Hot Dogs">
+      <%= image_tag 'slider2.jpg', :class => 'img-responsive' %>
       <div class="carousel-caption">
         Gourmet hot dogs!
       </div>
