--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
       <ul class="nav navbar-nav">
         <li>
         	<%= link_to new_place_path do %>
-        	<i class="glyphicon glyphicon-plus"></i>
+        	<span class="glyphicon glyphicon-plus"></span>
         	New Place
         	<% end %>
         </li>
