--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -28,7 +28,7 @@ body {
 }
 
 .navbar-inverse .navbar-brand {
-	color: #ED6B87;
+	color: #4270DB;
 	font-family:'porter_sans_blockblock',sans-serif;
 }
 
