--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,14 +1,14 @@
 <div class="booyah-box col-xs-10 col-xs-offset-1">
 
-	<h1><%= @place.name %></h1>
-	<i><%= @place.address %></i>
+	<h1><%= selected_place.name %></h1>
+	<i><%= selected_place.address %></i>
 	<br /><br />
-	<p><%= @place.description %></p>
-	<% if @place.latitude.present? && @place.longitude.present? %>
+	<p><%= selected_place.description %></p>
+	<% if selected_place.latitude.present? && selected_place.longitude.present? %>
 	    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true"></script>
 	    <script>
 			function initialize() {
-			  var myLatlng = new google.maps.LatLng(<%= @place.latitude %>,<%= @place.longitude %>);
+			  var myLatlng = new google.maps.LatLng(<%= selected_place.latitude %>,<%= selected_place.longitude %>);
 			  var mapOptions = {
 			    zoom: 12,
 			    center: myLatlng
@@ -33,7 +33,7 @@
 
 	<p>
      
-		<% @place.photos.each do |photo| %>           
+		<% selected_place.photos.each do |photo| %>           
           <a href=<%= photo.picture %> class="img-thumbnail">
             <p><%= photo.caption %></p> 
             <img src=<%= photo.picture %> alt="" style="width:150px;height:150px">
@@ -43,13 +43,13 @@
 	</p>
 
 	<div class="pull-right">
-		<% if current_user && current_user == @place.user %>
+		<% if current_user && current_user == selected_place.user %>
 			<!-- Button trigger photo modal -->
 			<button class="btn btn-primary" data-toggle="modal" data-target="#photoModal">
 			  Add a photo
 			</button>
-			<%= link_to 'Edit', edit_place_path(@place), :class => 'btn btn-primary' %>
-			<%= link_to 'Destroy', place_path(@place), :method => :delete, :data => {:confirm => 'Are you sure you want to delete this?'},:class => 'btn btn-danger' %>
+			<%= link_to 'Edit', edit_place_path(selected_place), :class => 'btn btn-primary' %>
+			<%= link_to 'Destroy', place_path(selected_place), :method => :delete, :data => {:confirm => 'Are you sure you want to delete this?'},:class => 'btn btn-danger' %>
 		<% end %>
 	</div>
 </div>
@@ -64,7 +64,7 @@
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <h4 class="modal-title" id="myModalLabel">Add a comment</h4>
       </div>
-      <%= simple_form_for @comment,:url => place_comments_path(@place) do |f| %>
+      <%= simple_form_for @comment,:url => place_comments_path(selected_place) do |f| %>
 	      <div class="modal-body">
 					<div class="clear">
 						 
@@ -93,7 +93,7 @@
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <h4 class="modal-title" id="photoModalLabel">Add a photo</h4>
       </div>
-      <%= simple_form_for @photo, :url => place_photos_path(@place) do |f| %>
+      <%= simple_form_for @photo, :url => place_photos_path(selected_place) do |f| %>
 	      <div class="modal-body">
 					<div class="clear">
 						 
@@ -122,7 +122,7 @@
 
 </div>
 <div class="clear"></div>
-<% @place.comments.each do |comment| %>
+<% selected_place.comments.each do |comment| %>
 	<div class="col-xs-12 col-sm-6"> 
 		<blockquote>
 			<% if comment.humanized_rating.present? %>
